--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<h1>'Why I want to become a developer?'</h1>
-<p><h2>Because i love to create new things and also i like coding. </h2></p>
+<h1>Why I want to become a developer?</h1>
+<p>Because i love to create new things and also i like coding.</p>
 
     <script type="text/javascript" src="./script.js">
 </script>
